# 2D-Ising-Model-NumCPP

./: .gitignore  CMakeLists.txt  README.md  ising.cxx
.cache/clangd/index/: ising.cxx.2AF9D64FC98943A6.idx
